Spacing of diagrams to avoid encroaching  right edge

--- a/html/no-table.css
+++ b/html/no-table.css
@@ -48,6 +48,7 @@ p.default { display: block; }
 
 .diagram  .east {
     float:right;
+    padding-right: 1em;
 }
 
 
